--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-
-    <style name="Theme.TruthOrDare" parent="android:Theme.Material.Light.NoActionBar" />
+    <style name="Theme.TruthOrDare" parent="Theme.AppCompat.Light.DarkActionBar">
+        <item name="colorPrimary">#6200EE</item>
+        <item name="colorAccent">#03DAC5</item>
+        <item name="android:statusBarColor">@color/colorPrimaryVariant</item>
+    </style>
 </resources>
